changed method first and last